name:               maccatcher
version:            1.0.1
category:           Text
license:            BSD3
license-file:       LICENSE
author:             Jason Dusek
maintainer:         oss@solidsnack.be
synopsis:           Obtain the host MAC address on *NIX and Windows.
description:
  Obtain the host MAC address on *NIX and Windows.


cabal-version:      >= 1.2
build-type:         Simple
extra-source-files:   README
                    , CONTRIBUTORS
                    , samples


library
  build-depends:      base
                    , haskell98
                    , binary
                    , process
                    , parsec
  exposed-modules:  Data.MAC
                    System.Info.MAC
                    System.Info.MAC.Fetch


executable          maccatcher
  main-is:          MACCatcher.hs 

